Add spell checking, fix scroll list selection not persisting

--- a/StudentOutreach/Localizable.xcstrings
+++ b/StudentOutreach/Localizable.xcstrings
@@ -7,12 +7,12 @@
     "[File a Github issue](https://github.com/ephraimkunz/StudentOutreach/issues/new/choose)" : {
 
     },
-    "[Send an email](mailto:kunzep@byui.edu?subject=Feedback%20or%20bug%20report%20for%20StudentOutreach)" : {
+    "[Send an email](mailto:ekunz@byupathway.edu?subject=Feedback%20or%20bug%20report%20for%20StudentOutreach)" : {
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "new",
-            "value" : "[Send an email](mailto:kunzep@byui.edu?subject=Feedback%1$20or%20bug%20report%2$20for%3$20StudentOutreach)"
+            "value" : "[Send an email](mailto:ekunz@byupathway.edu?subject=Feedback%1$20or%20bug%20report%2$20for%3$20StudentOutreach)"
           }
         }
       }
